--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "main": "src/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "winston": "^2.1.0"
   }
 }
