--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
   "license": "ISC",
   "main": "src/main/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "dependencies": {
     "command-line-args": "^2.1.0",
     "find-parent-dir": "^0.3.0",
     "winston": "^2.1.0"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "jit-grunt": "^0.9.1",
+    "time-grunt": "^1.2.2"
   }
 }
