--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "winston": "^2.1.0"
   },
   "devDependencies": {
+    "chai": "^3.4.1",
+    "chai-as-promised": "^5.1.0",
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
+    "grunt-mocha-istanbul": "^3.0.1",
+    "istanbul": "^0.4.0",
     "jit-grunt": "^0.9.1",
+    "mocha": "^2.3.3",
     "time-grunt": "^1.2.2"
   }
 }
