--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^17.3.1",
     "grunt-mocha-istanbul": "^3.0.1",
     "istanbul": "^0.4.0",
     "jit-grunt": "^0.9.1",
