--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "command-line-args": "^2.1.0",
     "find-parent-dir": "^0.3.0",
+    "jsonfile": "^2.2.3",
     "winston": "^2.1.0"
   },
   "devDependencies": {
